<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UETNotifier</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_save">Lưu</string>
    <string name="inbox_message_notification_title_template">%1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="inbox_message_notification_placeholder_text_template">%1$s</string>
    <string name="action_reply">Reply</string>
    <!-- Strings related to Settings -->
    <string name="fail_sign_in">Tài khoản sai! vui lòng kiểm tra lại</string>
    <string name="please_wait">Plesse wait ...</string>
    <string name="tkb">Thời Khóa Biểu</string>
    <string name="tuyendungt">Tuyển Dụng</string>
    <string name="pref_header_general">Tổng quan</string>
    <string name="pref_header_notifications">Cài đặt thông báo</string>
    <string name="pref_title_vibrate">Rung</string>
    <string name="pref_title_ringtone">Nhạc chuông</string>
    <string name="pref_title_new_message_notifications">Thông Báo</string>
    <string name="pref_title_daotao">Đào tạo</string>
    <string name="pref_title_congtac">Công tác</string>
    <string name="pref_ringtone_silent">Câm lặng</string>
    <string name="nav_user">Tài Khoản</string>
    <string name="nav_daotao">Đào Tạo</string>
    <string name="nav_congtac">Công Tác</string>
    <string name="nav_mynotification">Hộp Thư</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="contact">Liên lạc</string>
    <string name="pref_header_user">Tài Khoản</string>
    <string name="logout">Đăng xuất</string>
    <string name="message_logout">Bạn thật sự muốn đăng xuất ?</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="nav_thongbao">Thông báo</string>
    <string name="nav_tintuc">Tin Tức</string>
    <string name="daotao">Đào Tạo</string>
    <string name="congtac">Công Tác</string>
    <string name="pref_title_tintuc">Tin Tức</string>
    <string name="action_share">Chia sẻ</string>
    <string name="nav_myprofile">Thông Tin Cá Nhân</string>
    <string name="pref_title_thongbao">Thông Báo</string>
    <string name="filter">Lọc theo chủ đề</string>

    <string name="tindaotao">Tin Đào Tạo</string>
    <string name="tinsinhvien">Tin Sinh Viên</string>
    <string name="tinsaudaihoc">Đào tạo sau Đại học</string>
    <string name="tinhoptac">Tin Tổng Hợp</string>
    <string name="tinhocphihocbong">Học phí, học bổng</string>
    <string name="tinnghiencuu">Tin Nghiên Cứu</string>
    <string name="tinthacsy">Thạc sỹ</string>
    <string name="tintiensy">Tiến sỹ</string>
    <string name="tincohoivieclam">Cơ hội việc làm</string>
    <string name="tincuusinhvien">Cựu sinh viên</string>
    <string name="tinquyche">Quy chế, qui định</string>
    <string name="tinsanpham">Sản phẩm Khoa học công nghệ</string>
    <string name="tintuc">Tin Tức</string>
    <string name="tatca">Tất cả tin tức</string>

    <string name="chitiet">Chi tiết</string>
    <string name="xemsau">Xem sau</string>
    <string name="daxem">Đã xem</string>
    <string name="sound_notification">soundnotification</string>
    <string name="vibrate">rung</string>
    <string name="sound_notification_default">content://settings/system/notification_sound</string>
    <string name="please_exit">Mời bạn vui lòng thoát ra và vào lại!</string>
    <string name="action_delete">Xóa</string>
    <string name="fail_download">Lỗi trong khi tải tài nguyên</string>
    <string name="msv">Mã</string>
    <string name="ten">Họ và tên</string>
    <string name="diemgiuaky">Giũa kỳ</string>
    <string name="diemcuoiky">Cuối kỳ</string>
    <string name="diemtong">Tổng</string>
    <string name="xemthem">Xem thêm</string>
    <string name="thugon">Thu gọn</string>
    <string name="nav_hopthongbao">Hộp thông báo</string>
    <string name="nav_hopthu">Hộp thư</string>
    <string name="title_sent">Thư đã gửi</string>
    <string name="title_drafts">Thư nháp</string>
    <string name="title_trash">Thư xóa</string>
    <string name="sync_account_type">tuan.uet.vnu</string>
    <string name="content_authority">vnu.uet.tuan.uetsupporter</string>
    <string name="testtext">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.Unfortunately, to effectively test the support for the system-wide suspend and resume transitions in a driver, it is necessary to suspend and resume a fully functional system with this driver loaded.  Moreover, that should be done several times, preferably several times in a row, and separately for hibernation (aka suspend to disk or STD) and suspend to RAM (STR), because each of these cases involves slightly different operations and different interactions with the machine\'s BIOS.  Of course, for this purpose the test system has to be known to suspend and resume without the driver being tested.  Thus, if possible, you should first resolve all suspend/resume-related problems in the test system before you start testing the new driver.  Please see Documentation/power/basic-pm-debugging.txt for more information about the debugging of suspend/resume functionality.</string>
    <string name="tenfile">điều chỉnh lịch học.doc</string>
    <string name="title_attach_file">File đính kèm</string>
    <string name="danhsach">Danh sách sinh viên.doc</string>
    <string name="mucdoc_khancap">Khẩn cấp</string>
    <string name="title_html">Html</string>
    <string name="action_important">Đánh đấu quan trọng</string>
    <string name="add_a_comment_here">Phản hồi tại đây</string>
    <string name="recording">test 1</string>
    <string name="newthongbao">Tiêu Điểm</string>
    <string name="date_test">13/2/2016</string>
    <string name="string_test">Hôm nfddddddddddddddddddddddđ</string>
    <string name="user_pdt">Phòng đào tạo</string>
    <string name="email_action_from">Từ</string>
    <string name="email_action_to">Tới</string>
    <string name="email_action_cc">Cc</string>
    <string name="email_action_bcc">Bcc</string>
    <string name="email_action_title">Chủ đề</string>
    <string name="email_action_content">Soạn email</string>
    <string name="title_send_now">Gửi</string>
    <string name="action_huy">Hủy</string>
    <string name="action_help_feedback">Trợ giúp và phản hồi</string>
    <string name="fullmail_from_ma_sinh_vien">%1$s@vnu.edu.vn</string>
    <string name="title_write_email">Soạn thư</string>
    <string name="title_setting_time">Thời gian đồng bộ</string>
    <string name="time_sync">15 phút</string>
    <string name="lable_subcriber_notification">Đăng kí thông báo</string>
    <string name="cancel_success">Cancel Success</string>
    <string name="cancel_failure">Cancel Failure</string>
    <string name="title_inbox">Thư đến</string>
    <string name="pref_title_mark">Điểm Thi</string>
    <string name="title_mon_hoc">Môn học: %1$s</string>
    <string name="title_ma_mon_hoc">Mã môn học: %1$s</string>
    <string name="title_giang_viens">Giảng viên: %1$s</string>
    <string name="title_size_class">Sĩ số: %1$d</string>
    <string name="title_term">Kỳ học: %1$s</string>
    <string name="title_class">Khóa lớp</string>
    <string name="email_from">Từ: %1$s</string>
    <string name="email_date_receive">Ngày nhận: %1$s</string>
    <string name="email_receiver">Người nhận: %1$s</string>
    <string name="string_yesterday">Hôm qua</string>
    <string name="notification_type">Chủ đề: %1$s</string>
    <string name="total_reaction">%1$s</string>
    <string name="reply">Trả lời</string>
    <string name="more">Khác</string>
    <string name="fail_authentication">Token của bạn đã hết hạn hãy đăng nhập lại!</string>
    <string name="feedback_to">To: %s</string>
    <string name="reply_feedback">%1$s lượt phản hồi</string>

</resources>