<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="@string/sound_notification_default"
        android:dependency="notifications_new_message"
        android:key="@string/sound_notification"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="@string/vibrate"
        android:title="@string/pref_title_vibrate" />
    <ListPreference
        android:title="@string/title_setting_time"
        android:key="@string/title_setting_time"
        android:summary="@string/time_sync"
        android:entryValues="@array/entries_time_sync"
        android:entries="@array/value_time_sync" />
</PreferenceScreen>
