<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <vnu.uet.tuan.uetsupporter.Model.Customize.CustomizePreferenceCatology
        android:title="@string/lable_subcriber_notification">
        <CheckBoxPreference
            android:key="@string/pref_title_mark"
            android:title="@string/pref_title_mark"
            android:icon="@drawable/ic_action_choose_kind" />
        <MultiSelectListPreference
            android:key="@string/pref_title_tintuc"
            android:title="@string/pref_title_tintuc"
            android:icon="@drawable/ic_action_choose_kind" />
        <MultiSelectListPreference
            android:key="@string/pref_title_thongbao"
            android:title="@string/pref_title_thongbao"
            android:icon="@drawable/ic_action_choose_kind" />
    </vnu.uet.tuan.uetsupporter.Model.Customize.CustomizePreferenceCatology>


</PreferenceScreen>
