<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vnu.uet.tuan.uetsupporter.Fragment.DialogLogoutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"

        android:text="@string/message_logout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_dialog_logout_submit"
            android:textAllCaps="false"
            android:text="@string/action_ok"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_dialog_logout_cancel"
            android:text="@string/action_cancel"
            android:textAllCaps="false"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
