<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/refresh"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/header"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginLeft="5dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_angry"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_cry"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_surprised"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:id="@+id/total_reaction"
                    android:text="@string/total_reaction"
                    android:textSize="12sp"
                    android:maxLines="1"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:background="@drawable/border_button"
                    android:text="Xong"
                    android:id="@+id/finish"
                    android:layout_marginRight="5dp"
                    android:textAllCaps="false"
                    android:layout_gravity="right"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_chat" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/layout_chat">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:id="@+id/feedback_to"
                android:text="@string/feedback_to"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:visibility="gone"
                android:padding="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/commenttext"
                android:background="@null"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:textSize="16sp"
                android:maxLines="1"
                android:layout_marginRight="50dp"
                android:singleLine="false"
                android:focusableInTouchMode="true"
                android:hint="@string/add_a_comment_here">
            </EditText>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="36dp"
                android:layout_height="36dp"

                android:layout_marginRight="5dp"
                android:id="@+id/send"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_action_send_now" />
        </FrameLayout>

    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>
